# justogres

./: .gitignore  LICENSE  README.md  README2.md  setup.cfg  setup.py
.github/workflows/: python-publish.yml
docs/: README.md  releases.md
src/: __init__.py
src/df_to_postgres.egg-info/: PKG-INFO  SOURCES.txt
src/df_to_postgres_joigmz.egg-info/: PKG-INFO  SOURCES.txt
src/dftopo/: __init__.py  dfps.py
src/dftopo.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/justogres/: Mongo.py  __init__.py  db.py  spreadsheets.py  utils.py
src/justogres.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
