[metadata]
name = justogres
version = 2.0.3
author = Jose Izam, Daniel Taiba
author_email = jose.izam99@gmail.com, danielt.dtr@gmail.com
description = Pass postgres data to pandas dataframe
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/justo-bi/justogres
project_urls =
    Bug Tracker = https://github.com/justo-bi/justogres
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

install_requires =
    numpy==1.22.3
    pandas==1.2.2
    psutil==5.9.0
    psycopg2-binary==2.9.3
    python-dateutil==2.8.2
    pytz==2022.1
    six==1.16.0

[options.packages.find]
where = src
