[metadata]
name = justogres
version = 3.0.3
author = Jose Izam, Daniel Taiba
author_email = jose.izam99@gmail.com, danielt.dtr@gmail.com
description = Pass postgres data to pandas dataframe
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/justo-bi/justogres
project_urls =
    Bug Tracker = https://github.com/justo-bi/justogres
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

install_requires =
    pandas
    psycopg2-binary
    numpy
    sqlalchemy


[options.packages.find]
where = src
