[metadata]
name = justogres
version = 3.0.7
author = Jose Izam, Daniel Taiba
author_email = jose.izam99@gmail.com, danielt.dtr@gmail.com
description = This library is used to read or write data in Postgres or Google Sheets
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/justo-bi/justogres
project_urls =
    Bug Tracker = https://github.com/justo-bi/justogres
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

install_requires =
    pandas
    numpy
    psycopg2-binary
    sqlalchemy
    google-api-python-client
    google-auth

[options.packages.find]
where = src
